[gd_scene load_steps=7 format=3 uid="uid://ckadwop3x5yfx"]

[ext_resource type="Script" path="res://level_select.gd" id="1_3mqa0"]
[ext_resource type="Theme" uid="uid://bpswxq60aviax" path="res://themes/theme.tres" id="3_nf4ct"]
[ext_resource type="FontFile" uid="uid://chlo1df4t6fcd" path="res://assets/ui/fonts/rainyhearts.ttf" id="3_vm8hg"]
[ext_resource type="Texture2D" uid="uid://bruojp88g60sk" path="res://assets/backgrounds/PurpleCloudBackground.png" id="5_jgwek"]
[ext_resource type="Texture2D" uid="uid://da66rrq2f1mg5" path="res://assets/backgrounds/PurpleCloudBackground2.png" id="6_ilctk"]
[ext_resource type="Texture2D" uid="uid://cpk5vh8o3dy0r" path="res://assets/backgrounds/PurpleCloudBackground3.png" id="7_gmcnr"]

[node name="LevelSelect" type="Node2D"]
position = Vector2(828, 388)
script = ExtResource("1_3mqa0")

[node name="PurpleBackground" type="Parallax2D" parent="."]
visible = false
scroll_offset = Vector2(-620, -8)
repeat_size = Vector2(800, 600)

[node name="Sprite2D" type="Sprite2D" parent="PurpleBackground"]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("5_jgwek")

[node name="Clouds1" type="Parallax2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
scroll_offset = Vector2(-1188, -716)
repeat_size = Vector2(800, 600)
autoscroll = Vector2(100, 0)

[node name="Sprite2D" type="Sprite2D" parent="Clouds1"]
visible = false
texture = ExtResource("6_ilctk")
centered = false

[node name="Clouds2" type="Parallax2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
scroll_offset = Vector2(-1100, -760)
repeat_size = Vector2(800, 600)
autoscroll = Vector2(50, 0)

[node name="Sprite2D" type="Sprite2D" parent="Clouds2"]
texture = ExtResource("7_gmcnr")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -172.0
offset_right = 186.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_font_sizes/font_size = 64
text = "Select a Level:"

[node name="ButtonWorld1" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 1"

[node name="ButtonWorld2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 2"

[node name="ButtonWorld3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 3"

[node name="ButtonWorld4" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 4
"

[node name="ButtonWorld5" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 5
"

[node name="ButtonWorld6" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 6"

[node name="ButtonWorld7" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 7"

[node name="ButtonWorld8" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 8
"

[node name="ButtonWorld9" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "World 9
"

[node name="ButtonWorld10" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
text = "World 10
"

[node name="ButtonWorld11" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
text = "World 11"

[node name="ButtonWorld12" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
text = "World 12"

[node name="ButtonWorld13" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nf4ct")
text = "World 12"

[node name="Back" type="Button" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_nf4ct")
theme_override_fonts/font = ExtResource("3_vm8hg")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld1" to="." method="_on_button_world_1_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld2" to="." method="_on_button_world_2_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld3" to="." method="_on_button_world_3_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld4" to="." method="_on_button_world_4_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld5" to="." method="_on_button_world_5_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld6" to="." method="_on_button_world_6_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld7" to="." method="_on_button_world_7_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld8" to="." method="_on_button_world_8_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld9" to="." method="_on_button_world_9_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld10" to="." method="_on_button_world_10_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld11" to="." method="_on_button_world_11_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld12" to="." method="_on_button_world_12_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/ButtonWorld13" to="." method="_on_button_world_13_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/Back" to="." method="_on_back_button_down"]
